--- a/index.html
+++ b/index.html
@@ -244,3 +244,86 @@ input[type=submit]:hover {
     <label for="lname">Last Name</label>
     <input type="text" id="lname" name="lastname" placeholder="Your last name..">
 </br>
+<label for="country">Country</label>
+    <select id="country" name="country">
+      <option value="-.-">-.-</option>
+      <option value="Akurdi">Akurdi</option>
+      <option value="Ambegaon Budruk">Ambegaon Budruk</option>
+      <option value="Aundh">Aundh</option>
+      <option value="Balewadi">Balewadi</option>
+      <option value="Baner">Baner</option>
+      <option value="Bavdhan Budruk">Bavdhan Budruk</option>
+      <option value="Bavdhan Khurd">Bavdhan Khurd</option>
+      <option value="Bhosari">Bhosari</option>
+      <option value="Bhugaon">Bhugaon</option>
+      <option value="Bhukum">Bhukum</option>
+      <option value="Bibvewadi">Bibvewadi</option>
+      <option value="Chakan">Chakan</option>
+      <option value="Charholi">Charholi</option>
+      <option value="Chikhli">Chikhli</option>
+      <option value="Chinchwad">Chinchwad</option>
+      <option value="Dapodi">Dapodi</option>
+      <option value="Dehu Road">Dehu Road</option>
+      <option value="Dhankawadi">Dhankawadi</option>
+      <option value="Dhanori">Dhanori</option>
+      <option value="Dighi">Dighi</option>
+      <option value="Fursungi">Fursungi</option>
+      <option value="Ghorpadi">Ghorpadi</option>
+      <option value="Hadapsar">Hadapsar</option>
+      <option value="Hinjawadi">Hinjawadi</option>
+      <option value="Kalewadi">Kalewadi</option>
+      <option value="Karve Nagar">Karve Nagar</option>
+      <option value="Kasarwadi">Kasarwadi</option>
+      <option value="Katraj">Katraj</option>
+      <option value="Khadki">Khadki</option>
+      <option value="Kharadi">Kharadi</option>
+      <option value="Kondhwa">Kondhwa</option>
+      <option value="Koregaon Park">Koregaon Park</option>
+      <option value="Kothrud">Kothrud</option>
+      <option value="Maan">Maan</option>
+      <option value="Manjri">Manjri</option>
+      <option value="Markal">Markal</option>
+      <option value="Mohammed Wadi">Mohammed Wadi</option>
+      <option value="Moshi">Moshi</option>
+      <option value="Mundhwa">Mundhwa</option>
+      <option value="Nanded">Nanded</option>
+      <option value="Panmala">Panmala</option>
+      <option value="Parvati">Parvati</option>
+      <option value="Pashan">Pashan</option>
+      <option value="Phugewadi">Phugewadi/option>
+      <option value="Pimple Gurav">Pimple Gurav/option>
+      <option value="Pimple Nilakh">Pimple Nilakh/option>  
+      <option value="Pimple Saudagar">Pimple Saudagar/option>
+      <option value="Pimpri">Pimpri/option>
+      <option value="Pirangut">Pirangut/option>  
+      <option value="Rahatani">Rahatani/option>
+      <option value="Ravet">Ravet/option>
+      <option value="Sangvi">Sangvi/option>            
+      <option value="Shivajinagar">Shivajinagar/option>
+      <option value="Sus">Sus/option>  
+      <option value="Talawade">Talawade/option>
+      <option value="Tathawade">Tathawade/option>
+      <option value="Thergaon">Thergaon/option>  
+      <option value="Undri">Undri/option>
+      <option value="Vadgaon Budruk">Vadgaon Budruk/option>
+      <option value="Vadgaon Khurd">Vadgaon Khurd/option> 
+      <option value="Vadgaon Sheri">Vadgaon Sheri/option>
+      <option value="Vishrantwadi">Vishrantwadi/option>
+      <option value="Wagholi">Wagholi/option>
+      <option value="Wakad">Wakad/option> 
+      <option value="Wanowrie">Wanowrie/option>
+      <option value="Warje">Warje/option>
+      <option value="Yerwada">Yerwada/option>
+          
+      
+      </select>
+
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+    <input type="submit" value="Submit">
+  </form>
+</div>
+
+</body>
+</html>
