Updated image paths 158-179

--- a/index.html
+++ b/index.html
@@ -159,22 +159,22 @@
       
         <div class="row">
           <div class="column">
-            <img src="C:\Users\Sanskruti\Desktop\GDSC project\A0001.jpg"  style="width:100%" >
+            <img src="images\A0001.jpg"  style="width:100%" >
           </div>
           <div class="column">
-            <img src="C:\Users\Sanskruti\Desktop\GDSC project\A0003.jpg"  style="width:100%" >
+            <img src="images\A0003.jpg"  style="width:100%" >
           </div>
           <div class="column">
-            <img src="C:\Users\Sanskruti\Desktop\GDSC project\A0004.jpg" style="width:100%" >
+            <img src="images\A0004.jpg" style="width:100%" >
           </div>
           <div class="column">
-            <img src="C:\Users\Sanskruti\Desktop\GDSC project\A0005.jpg"  style="width:100%" >
+            <img src="images\A0005.jpg"  style="width:100%" >
           </div>
           <div class="column">
-            <img src="C:\Users\Sanskruti\Desktop\GDSC project\A0007.jpg"  style="width:100%" >
+            <img src="images\A0007.jpg"  style="width:100%" >
           </div>
           <div class="column">
-            <img src="‪C:\Users\Sanskruti\Desktop\GDSC project\A0008.jpg"  style="width:100%" >
+            <img src="‪images\A0008.jpg"  style="width:100%" >
           </div>
         </div>
         
