Updated image path

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
      
          <div class="column" style="width: 25%;">
            <div class="card">
-             <img src="images\v logo.png" alt="Vaishnavi" style="width: 100%">
+             <img src="images\vai.jpg" alt="Vaishnavi" style="width: 100%">
              <div class="container">
                <h2><b>Vaishnavi Nimkar</b></h2>
                <p> Electronic and Telecommunication Engineering.</p>
