Try form connection with Netlify

--- a/index.html
+++ b/index.html
@@ -271,10 +271,10 @@ input[type=submit]:hover {
 <h3>Contact Form</h3>
 
 <div class="container">
-  <form action="/action_page.php">
+  <form name="contact" method="POST" data-netlify="true">
  <br>
     <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name...">
+    <input type="text" id="fname" name="firstname" placeholder="Your first name...">
 </br>
 
 <br>
