--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         <div class="title">
            <h1>SASWARC</h1>
         </div>
+              <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
        </header>   
        
        
