--- a/JS Trial.html
+++ b/JS Trial.html
@@ -12,7 +12,7 @@
           let crd = 15;  //Cardboard per kg 
           let ppr = 20;  //Paper per kg 
 
-          var type = window.prompt("Select waste type 1 for Platic, 2 for Cardborad, 3 for Paper? ");
+          var type = window.prompt("Select waste type 1 for Platic, 2 for Cardboard, 3 for Paper? ");
           var wght = window.prompt("Enter weight (note that this will be calculated automatically in the machine) ");
           var phon = window.prompt("Enter phone number associated with your account ")
 
@@ -29,7 +29,7 @@
           }
         
           alert(amt)
-          alert("Rupees added to your account!")
+          alert("Rupees will be added to your account!")
 
 
         </script> 
