--- a/JS Trial.html
+++ b/JS Trial.html
@@ -14,7 +14,7 @@
 
           var type = window.prompt("Select waste type 1 for Platic, 2 for Cardboard, 3 for Paper? ");
           var wght = window.prompt("Enter weight (note that this will be calculated automatically in the machine) ");
-          var phon = window.prompt("Enter phone number associated with your account ")
+          var phon = window.prompt("Enter email address associated with your account ")
 
           if (type == '1') {
               var amt = pls * wght;
