--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <div id="id01" class="modal">
                
                 <h1>
-                  <a href="JS Trial.html">JS Try</a>
+                  <a href="JS Trial.html">Click here</a>
                 </h1>
                    
               </div>
