--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
              
              <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script> 
              <body>
-           <div data-netlify-identity-button>Custom Login</div>
+           <div data-netlify-identity-button>Login</div>
            </body>
              
         </div>
