--- a/JS Trial.html
+++ b/JS Trial.html
@@ -12,7 +12,7 @@
           let crd = 15;  //Cardboard per kg 
           let ppr = 20;  //Paper per kg 
 
-          var type = window.prompt("Select waste type 1 for Platic, 2 for Cardboard, 3 for Paper? ");
+          var type = window.prompt("Select waste type 1 for Plastic, 2 for Cardboard, 3 for Paper? ");
           var wght = window.prompt("Enter weight (note that this will be calculated automatically in the machine) ");
           var phon = window.prompt("Enter email address associated with your account ")
 
